<resources>
    <string name="app_name">A Night at the Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="enter_movie_title_here">Enter movie title here</string>
    <string name="enter_genre_here">Enter genre here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string-array name="rating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="id">Movie ID</string>
    <string name="btnShowAll">SHOW ALL PG-13 MOVIES</string>
</resources>