<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_movie_title_here"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Genre"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_genre_here"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Year"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_year_of_release_here"
        android:inputType="text"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinnerr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rating" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonInsert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="INSERT" />

        <Button
            android:id="@+id/buttonShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SHOW" />
    </LinearLayout>
</LinearLayout>